[package]
name = "virgin-media-prometheus-exporter"
version = "0.1.0"
authors = ["Alex Tennant <alex@adtennant.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = "virgin-media-prometheus-exporter"

[dependencies]
actix-web = { version = "3.3.2", default_features = false, features = ["compress"] }
anyhow = "1.0.38"
config = { version = "0.10.1", default_features = false, features = ["toml"] }
env_logger = "0.8.3"
log = "0.4.14"
prometheus = "0.12.0"
reqwest = { version = "0.11.1", default_features = false, features = ["blocking", "json"] }
serde = { version = "1.0.124", default_features = false, features = ["derive"] }
serde-aux = { version = "2.1.1", default_features = false }
